@@ -1,5 +1,13 @@
 2005-03-31  Nathaniel Smith  <njs@codesourcery.com>
 
+	* automate.cc (automate_erase_ancestors): Accept zero arguments,
+	and in such case print nothing.  (Important for scripting.)
+	* commands.cc (automate):
+	* monotone.texi (Automation):
+	* tests/t_automate_erase_ancestors.at: Update accordingly.
+
+2005-03-31  Nathaniel Smith  <njs@codesourcery.com>
+
 	* automate.cc (automate_toposort): Accept zero arguments, and in
 	such case print nothing.  (Important for scripting.)
 	* commands.cc (automate):
